fix: edge case causing horizontal scrollbar
Prevent horizontal scrollbar in case of 100vw grid applied to page with vertical scrollbar.

Fix f851142
Fix #1976

--- a/wowchemy/assets/scss/wowchemy/_root.scss
+++ b/wowchemy/assets/scss/wowchemy/_root.scss
@@ -23,6 +23,8 @@ body {
   margin-top: 70px; /* Offset body content by navbar height. */
   padding-top: 0;
   counter-reset: captions;
+  // Prevent horizontal scrollbar in case of 100vw grid applied to page with vertical scrollbar.
+  overflow: hidden;
 }
 @include media-breakpoint-down(md) { /* Match max-width of .nav-bar query. */
   body {
